--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://sushantshpatil.github.io/profile",
   "name": "profile",
   "version": "0.1.0",
   "private": true,
@@ -9,13 +10,20 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "animate.css": "^3.7.0",
+    "bootstrap": "^4.3.1",
+    "node-sass": "^4.12.0",
+    "reactstrap": "^8.0.0",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
